--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,5 +3,9 @@
     <tr>
         <th>Nome</th>
         <th>Cognome</th>
+        <th>Codice Fiscale</th>
+        <th>Email</th>
+        <th>Telefono</th>
+        <th>Provincia</th>
     </tr>
 </table>
