--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,5 +1,5 @@
 <table>
-    <caption>User</caption>
+    <caption>{{title}}</caption>
     <tr>
         <th>Nome</th>
         <th>Cognome</th>
@@ -7,5 +7,17 @@
         <th>Email</th>
         <th>Telefono</th>
         <th>Provincia</th>
+        <th>Eta'</th>
+    </tr>
+       
+    
+    <tr *ngFor="let user of users"> 
+        <td>{{user.name}}</td>
+        <td>{{user.lastname}}</td>
+        <td>{{user.fiscalcode}}</td>
+        <td>{{user.email}}</td>
+        <td>{{user.phone}}</td>
+        <td>{{user.province}}</td>
+        <td>{{user.age}}</td>
     </tr>
 </table>
