--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,17 +1,17 @@
 table{
-    border:1px solid grey ;
+ border: 1px solid #c0c0c0;
+ border-collapse: collapse;
+}
+td,th{
+  padding:15px;
+  border: 1px solid #fff;
 }
 th {
-    background: black;
-    color: chartreuse;
-    padding: 10px;;
-}
-td,th {
-    padding: 15px;
-    border: 1px solid black;
-    
+  background: rgb(0, 0, 0);
+  color: chartreuse;
+
 }
 td {
-    background: silver;
-    color: blue;
+  background-color:silver;
+  color: red;
 }
