--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -8,6 +8,7 @@
         <th>Telefono</th>
         <th>Provincia</th>
         <th>Age</th>
+        <th>Action</th>
     </tr>
   <tr app-user *ngFor ="let user of users"  [user-data] ="user">
 
