--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,5 +6,6 @@
 <td>{{user.province}}</td>
 <td>{{user.age}}</td>
 <td>
-    <button class="delete" (click)="deleteUser(user)">DELETE</button>
+    <button class="delete" (click)="deleteUser()">DELETE</button>
+    <button class="update" (click)="updateUser()">UPDATE</button>
 </td>
