--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<form>
+<form class="userForm">
     <div class="form-group">
         <label for="name">Nome</label>
         <input name="name"id = "name"> 
@@ -29,6 +29,7 @@
     </div>
     <div class="form-group form-footer">
             <button class="btn-save">Salva</button>
+           
     </div>
 
 </form>
