--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -10,7 +10,7 @@
         <th>Age</th>
         <th>Action</th>
     </tr>
-  <tr app-user *ngFor ="let user of users"  [user-data] ="user" (onDeleteUser) = "onDeleteUser($event)">
+  <tr app-user *ngFor ="let user of users"  [user-data] ="user" (onDeleteUser) = "onDeleteUser($event)"  (onSelectUser) = "onSelectUser($event)">
     
 
   </tr>
