--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
 <app-users (updateUser) = "updateUser($event)"></app-users>
 </div>
 <div class="userDetail" *ngIf="userSelected">
-    <app-user-detail class="userDetail"></app-user-detail>
+    <app-user-detail [user] ="userSelected">
+
+    </app-user-detail>
 </div>
 </div>
