--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,31 +1,32 @@
+{{user | json}}
 <form class="userForm">
     <div class="form-group">
         <label for="name">Nome</label>
-        <input name="name"id = "name"> 
+        <input [(ngModel)]="user.name" name="name"id = "name"> 
     </div>
     <div class="form-group">
         <label for="lasttname">Cognome</label>
-        <input name="lastname"id = "lastname"> 
+        <input [(ngModel)]="user.lastname"name="lastname"id = "lastname"> 
     </div>
     <div class="form-group">
         <label for="fiscalcode">Codice Fiscale </label>
-        <input name="fiscalcode"id = "fiscalcode"> 
+        <input [(ngModel)]="user.fiscalcode"name="fiscalcode"id = "fiscalcode"> 
     </div>
     <div class="form-group">
         <label for="email">Email </label>
-        <input type="email" name="email"id = "email"> 
+        <input [(ngModel)]="user.email"type="email" name="email"id = "email"> 
     </div>
     <div class="form-group">
         <label for="phone">Telefono </label>
-        <input name="phone"id = "phone"> 
+        <input [(ngModel)]="user.phone"name="phone"id = "phone"> 
     </div>
     <div class="form-group">
         <label for="province">Provincia </label>
-        <input name="province"id = "province"> 
+        <input [(ngModel)]="user.province"name="province"id = "province"> 
     </div>
     <div class="form-group">
         <label for="age">Age </label>
-        <input type="number" name="age"id = "age"> 
+        <input [(ngModel)]="user.age" type="number" name="age"id = "age"> 
     </div>
     <div class="form-group form-footer">
             <button class="btn-save">Salva</button>
