--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,5 +1,5 @@
-{{user | json}}
 <form class="userForm">
+    <input type="hidden" name="id" [(ngModel)]="user.id">
     <div class="form-group">
         <label for="name">Nome</label>
         <input [(ngModel)]="user.name" name="name"id = "name"> 
@@ -29,7 +29,7 @@
         <input [(ngModel)]="user.age" type="number" name="age"id = "age"> 
     </div>
     <div class="form-group form-footer">
-            <button class="btn-save">Salva</button>
+            <button class="btn-save"(click)="saveUser()">Salva</button>
            
     </div>
 
